Added winston logger and its configuration

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,10 +4,12 @@
     "target": "ES2020",
     "module": "commonjs",
     "strict": true,
+    "typeRoots": ["node_modules/@types", "./src/@types"],
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist"
   },
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
