--- a/server/package.json
+++ b/server/package.json
@@ -6,22 +6,33 @@
   "scripts": {
     "start": "node dist/src/app.js",
     "build": "tsc",
-    "dev": "nodemon app.ts"
+    "dev": "nodemon --watch src --exec ts-node src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
+    "bcrypt": "^5.1.1",
     "cloudinary": "^2.4.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.2",
+    "passport": "^0.7.0",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^22.2.0",
+    "@types/passport": "^1.0.16",
+    "@types/winston": "^2.4.4",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
